[tool.poetry]
name = "higga"
version = "0.1.0"
description = "Higga."
authors = ["h <higga.bot@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
jishaku = "^1.20.0"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
